--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 :root {
     --blued: #3b82f6;
     --light-grey: #e2e8f0;
+    font-size: calc(0.625rem + 0.4vw);
 }
 
 .profile-img, .mini-profile-img {
@@ -13,13 +14,13 @@
 }
 
 .mini-profile-img {
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
 }
 
 .profile-img {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
 }
 
 /* General Layout*/
@@ -79,7 +80,10 @@ div.logo > div {
     grid-row: 1 / 2;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    align-items: center;
+    gap: 1.5rem 0;
+    padding: 1rem 3rem;
+    position: relative;
+    box-shadow: 0 5px 10px -5px #333;
 }
 
 .search-bar,
@@ -91,17 +95,53 @@ div.logo > div {
 .content-options {
     display: grid;
     grid-template-columns: 1fr 1fr 3fr;
-    gap: 30px;
+    gap: 10px;
     align-items: center;
 }
 
+
+    /* Start search bar */
 .search-bar {
-    margin: 0 40px;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
 }
 
+input[type=search] {
+    border-radius: 20px;
+    border: none;
+    background: var(--light-grey);
+    width: 80%;
+    height: 35px;
+}
+    /* End search bar */
+
+
+    /* Start Profile options */
+.profile-options img {
+    justify-self: end;
+}
+
+.profile-options div {
+    margin-left: 1rem;
+}
+    /* End Profile options */
+
+
+input[type=button] {
+    border-radius: 20px;
+    border: none;
+    background: var(--blued);
+    width: 80%;
+    height: 40px;
+}
+
+
+    /* Start Profile */
 .profile {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template: 1fr 1fr / auto 1fr;
+    gap: 0.5rem;
     align-items: center;
 }
 
@@ -117,10 +157,15 @@ div.logo > div {
 .profile-name {
     align-self: start;
 }
+    /* End Profile */
 
+
+    /* Start Content-options */
 .content-options {
     grid-template-columns: 1fr 1fr 1fr;
 }
+    /* End Content-options */
+
 
 /*------------------- Main Content -------------------*/
 .main-content {
@@ -129,12 +174,29 @@ div.logo > div {
     grid-template-columns: 3fr 1fr;
 }
 
+.projects, .announcements, .trending {
+    padding: 20px;
+}
+
+.project-card, .announcements-card, .trending-card {
+    padding: 1rem;
+    box-shadow: 0 5px 10px -5px #333;
+}
+
+.project-content, .announcements-content, .trending-content {
+    padding: 1rem;
+}
+
+
+    /* Start Projects section */
 .projects {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 400px);
-    gap: 30px;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 1rem 1.5rem;
 }
 
 .projects h3 {
@@ -142,13 +204,25 @@ div.logo > div {
 }
 
 .project-card {
-    height: 200px;
     background: white;
     border-radius: 2.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-left: 0.7rem solid #333;
 }
+
+.project-img {
+    align-self: end;
+    display: flex;
+    gap: 2rem;
+}
+    /* End Projects section */
+
 
 .announcements, .trending {
     grid-column: 2 / 4;
+
 }
 
 .announcements-card, .trending-card {
@@ -156,4 +230,36 @@ div.logo > div {
     display: flex;
     flex-direction: column;
     border-radius: 2.5%;
+    min-width: 130px;
 }
+
+
+    /* Start Announcements section */
+.announcements-content:nth-child(1), 
+.announcements-content:nth-child(2) {
+    border-bottom: 1px solid gray;
+}
+    /* End Announcements section */
+
+
+    /* Start Trending section */
+.trending-content {
+    display: grid;
+    grid-template: 1fr 1fr / auto 1fr;
+    gap: 0 1rem;
+    align-items: center;
+}
+
+.trending-content .mini-profile-img {
+    grid-row: 1 / 3;
+    justify-self: end;
+}
+
+.trending-content div:nth-child(1) {
+    align-self: start;
+}
+
+.trending-content div:nth-child(2) {
+    align-self: end;
+}
+    /* End Trending section */
