--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Source Sans Pro", -apple-system, 
+        BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, 
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", 
+        sans-serif;
 }
 
 :root {
@@ -231,6 +235,7 @@ input[type=button] {
     flex-direction: column;
     border-radius: 2.5%;
     min-width: 130px;
+    margin-top: 1rem;
 }
 
 
