--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*------------------- General -------------------*/
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +14,13 @@
     font-size: calc(0.625rem + 0.4vw);
 }
 
+/* Font size and color */
+h2 {
+    font-size: 30px;
+}
+
+
+/* Images sizes */
 .profile-img, .mini-profile-img {
     border-radius: 50%;
 }
@@ -46,14 +54,24 @@
 .dashboard,
 .options {
     display: flex;
-    gap: 30px;
+    gap: 1.5rem;
     padding: 20px 30px;
     align-items: center;
+}
+
+.options {
+    margin-left: 7px;
 }
 
 ul {
     padding: 0px;
     margin: 20px 0;
+}
+
+li {
+    margin-left: 1rem;
+    font-size: calc(1rem + 0.4vw);
+    font-weight: bold;
 }
     /* Start Logo css */
 .logo {
@@ -61,7 +79,7 @@ ul {
     height: 35px;
     width: 35px;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
-    gap: 3.5px;
+    gap: 3.8px;
 }
 
 div.logo > div {
@@ -138,6 +156,9 @@ input[type=button] {
     background: var(--blued);
     width: 80%;
     height: 40px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 
@@ -175,7 +196,7 @@ input[type=button] {
 .main-content {
     background-color: var(--light-grey);
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
 }
 
 .projects, .announcements, .trending {
@@ -214,12 +235,19 @@ input[type=button] {
     flex-direction: column;
     justify-content: space-between;
     border-left: 0.7rem solid #333;
+    margin-bottom: 1rem;
+}
+
+.project-content div {
+    color: #6b7280;
+    margin-top: 5px;
 }
 
 .project-img {
     align-self: end;
     display: flex;
     gap: 2rem;
+    margin: 0 1.5rem 1rem 0;
 }
     /* End Projects section */
 
@@ -235,11 +263,17 @@ input[type=button] {
     flex-direction: column;
     border-radius: 2.5%;
     min-width: 130px;
-    margin-top: 1rem;
+    margin: 1rem 0;
 }
 
 
     /* Start Announcements section */
+.announcements-content div {
+    color: #6b7280;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
 .announcements-content:nth-child(1), 
 .announcements-content:nth-child(2) {
     border-bottom: 1px solid gray;
@@ -266,5 +300,9 @@ input[type=button] {
 
 .trending-content div:nth-child(2) {
     align-self: end;
+}
+
+.trending-content div:nth-child(3) {
+    color: #6b7280;
 }
     /* End Trending section */
